# document-validator

./: .env.example  .gitignore  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  SKILL.md  agent.yaml  agents-cli-manifest.yaml  deploy.sh  deployment_metadata.json  pyproject.toml  requirements.txt  setup.sh
.agent/skills/portal-ready/: SKILL.md
agent/: __init__.py  agent.py  agent_runtime_app.py  drive_tool.py  recall.py  skill_loader.py  tools.py
agent/app_utils/: .requirements.txt  telemetry.py  typing.py
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
docs/superpowers/plans/: 2026-06-24-async-extraction-session-recall.md
docs/superpowers/specs/: 2026-06-24-async-extraction-session-recall-design.md
scripts/: extract_pdf_text.py  requirements.txt
skill/: SKILL.md  __init__.py
skill/scripts/: __init__.py  extract_pdf_text.py  fetch_drive_file.py  gcs_state.py  job_store.py  run_async_validation.py
tests/: conftest.py  test_agent.py  test_async_validation_tool.py  test_drive_tool.py  test_extract_pdf_text.py  test_job_store.py  test_recall.py  test_run_async_validation.py  test_skill_loader.py  test_tools.py
tests/eval/: eval_config.yaml
tests/eval/datasets/: basic-dataset.json
