[project]
name = "document-validator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "google-auth>=2.0.0",
    "google-cloud-storage>=2.0.0",
    "pdfplumber>=0.11.0",
    "gcsfs>=2024.11.0",
    "google-cloud-aiplatform[agent-engines,evaluation]>=1.156.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "protobuf>=6.31.1,<7.0.0",
    "google-api-python-client>=2.0.0",
    "a2a-sdk>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
eval = [
    "google-adk[eval]>=2.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.agents-cli]
agent_directory = "agent"

[tool.agents-cli.create_params]
deployment_target = "agent_runtime"

