[project]
name = "document-validator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-adk[gcp]>=2.0.0",
    "google-genai>=2.4.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "google-auth>=2.0.0",
    "google-cloud-storage>=2.0.0",
    "pdfplumber>=0.11.0",
    "pypdfium2>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
eval = [
    "google-adk[eval]>=2.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
